--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,43 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  background-color: rgb(100, 99, 99);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15%;
+}
+
+.container{
+  padding: 10px;
+  border: 2px solid whitesmoke;
+  width: 500px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+
+.head{
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+input{
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+input:hover{
+  background-color: rgb(158, 156, 152)
+}
+
+input:focus{
+  border: 0px;
+  background-color: beige;
+}
